cmake_minimum_required(VERSION 3.15)
project(io_demo C)

set(CMAKE_C_STANDARD 99)
IF (APPLE)
    MESSAGE("apple.....")
    link_libraries(rt)
    add_executable(io_demo main.c)
    add_executable(demo1 src/blockServer.c)
    add_executable(nonblock src/nonblockServer.c)
    add_executable(select src/multiplexing/selectServer.c)
    add_executable(poll src/multiplexing/pollServer.c)
    add_executable(LinuxAIOMain src/linuxaio/AioReadMain.c)
    add_executable(AioReadSocket src/linuxaio/AioReadSocket.c)
ELSEIF(UNIX)
    MESSAGE("unix.....")
    link_libraries(rt)
    add_executable(io_demo main.c)
    add_executable(demo1 src/blockServer.c)
    add_executable(nonblock src/nonblockServer.c)
    add_executable(select src/multiplexing/selectServer.c)
    add_executable(poll src/multiplexing/pollServer.c)
    add_executable(LinuxAIOMain src/linuxaio/AioReadMain.c)
    add_executable(AioReadSocket src/linuxaio/AioReadSocket.c)

    add_executable(epoll src/multiplexing/epollServer.c)
    add_executable(serverET src/multiplexing/epollETLT.c)
ELSEIF(WIN32)
    MESSAGE("win32.....")
    #如果乱码，可以尝试放开或关闭注释
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=gbk")
    set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=gbk")
    link_libraries(wsock32 ws2_32)
    add_executable(iocp src/multiplexing/IOCPServer.c)
ENDIF()
